WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269881
CrashTracer: com.apple.WebKit.WebContent at WebKit: WebKit::WebPage::drawPagesToPDFImpl
https://bugs.webkit.org/show_bug.cgi?id=269881
Summary
CrashTracer: com.apple.WebKit.WebContent at WebKit: WebKit::WebPage::drawPage...
Aditya Keerthi
Reported
2024-02-21 16:54:36 PST
rdar://99740304
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-02-21 17:00:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24911
EWS
Comment 2
2024-02-21 22:36:52 PST
Committed
275149@main
(3194a24ba7ab): <
https://commits.webkit.org/275149@main
> Reviewed commits have been landed. Closing PR #24911 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug