CrashTracer: com.apple.WebKit.WebContent at WebKit: WebKit::WebPage::drawPagesToPDFImpl https://bugs.webkit.org/show_bug.cgi?id=269881 rdar://99740304

Reviewed by Wenson Hsieh.

Crash reports have been showing null derefs of `m_printContext` under
`drawPagesToPDFImpl`. However, it is unclear exactly what results in this
scenario, and a user reports have not been found.

Fix by adding a null check.

* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::drawPagesToPDFImpl):

Canonical link: https://commits.webkit.org/275149@main